force-app/main/default/objects/Candidato__c/fields/CEPAlterado__c.field-meta.xml
<CustomField>
    <fullName>CEPalterado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEP alterado</label>
    <type>Checkbox</type>
</CustomField>