force-app/main/default/objects/Candidato__c/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Data que o candidato nasceu registrado na certidão de nascimento (Usada no cálculo idade)</description>
    <inlineHelpText>Data que o candidato nasceu registrado na certidão de nascimento</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>