force-app/main/default/objects/Candidato__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Pontuação  baseada ba idade e na divida</description>
    <formula>FLOOR( ValorDivida__c  /100) + 40000 - IF( Idade__c  &gt; 80,40000,( ABS( Idade__c -40) * 1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pontuação  baseada ba idade e na divida</inlineHelpText>
    <label>Pontuacao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>