force-app/main/default/objects/Candidato__c/validationRules/EmailObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailObrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Campo Obrigatório</errorMessage>
</ValidationRule>